# rrf

./: .gitignore  ASSESSMENT.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  NOTES.md  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
.rrf/: events.jsonl
.rrf/estate/: IDENTITY  LOG  MANIFEST-000005
.rrf/mesh/: node-1.events.jsonl  node-2.events.jsonl  node-3.events.jsonl
.rrf/mesh/estate-1/: IDENTITY  LOG  MANIFEST-000005
.rrf/mesh/estate-2/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
.rrf/mesh/estate-3/: IDENTITY  LOG  MANIFEST-000005
baselines/: container-estate.json  container-mem.json
crates/classifier/: Cargo.toml
crates/classifier/src/: constrained.rs  daemon.rs  heuristic.rs  lib.rs
crates/connectome/: Cargo.toml
crates/connectome/src/: graph.rs  lib.rs
crates/connectors/: Cargo.toml
crates/connectors/src/: lib.rs
crates/connectors/tests/: sync.rs
crates/connxism/: Cargo.toml
crates/connxism/src/: estate.rs  filter.rs  index.rs  keys.rs  lib.rs  model.rs  pending.rs  query.rs  rels.rs  store.rs  strategies.rs  txn.rs
crates/connxism/src/kv/: fjall.rs  mod.rs  rocks.rs
crates/connxism/tests/: analyzer.rs  collections.rs  crash.rs  datetime.rs  estate.rs  filters.rs  fjall_spike.rs  fusion_weights.rs  graph_persist.rs  key_limit.rs  lexical_prune.rs  multivec.rs  quantized.rs  query_extras.rs  routing.rs  sparse.rs  strategies.rs
crates/embedder/: Cargo.toml
crates/embedder/benches/: embed.rs
crates/embedder/src/: deterministic.rs  devpulse.rs  lib.rs  openai.rs
crates/embedder/src/candle_qwen/: encoder.rs  mod.rs
crates/embedder/tests/: candle_qwen_gate.rs  engine_agreement.rs  properties.rs
crates/model-registry/: Cargo.toml
crates/model-registry/src/: lib.rs
crates/recall/: Cargo.toml
crates/recall/benches/: search.rs
crates/recall/src/: ann.rs  flat.rs  lib.rs
crates/recall/tests/: paged.rs  properties.rs
crates/reranker/: Cargo.toml
crates/reranker/benches/: rerank.rs
crates/reranker/src/: bm25.rs  candle_qwen.rs  devpulse.rs  http.rs  lib.rs
crates/reranker/tests/: properties.rs  rerank_lift.rs
crates/rrd/: Cargo.toml
crates/rrd/src/: baseline.rs  lib.rs  mode.rs  plan.rs  registry.rs  router.rs  rro.rs  shape.rs  trigger.rs
crates/rrf-client/: Cargo.toml
crates/rrf-client/src/: lib.rs
crates/rrf-client/tests/: client.rs
crates/rrf-core/: Cargo.toml
crates/rrf-core/src/: error.rs  lib.rs  query.rs  text.rs  traits.rs  types.rs
crates/rrf-core/tests/: properties.rs
crates/rrf-flow/: Cargo.toml
crates/rrf-flow/examples/: demo.rs  featbench.rs
crates/rrf-flow/src/: estate_map.rs  flow.rs  handler.rs  ingest.rs  lib.rs  ops.rs  sample.rs  serve.rs
crates/rrf-flow/tests/: auth.rs  introspect.rs  maintenance.rs  ops.rs  quotas.rs  watch.rs
crates/rrf-net/: Cargo.toml
crates/rrf-net/src/: handler.rs  lib.rs  local.rs  message.rs  tcp.rs
crates/rro-client/: Cargo.toml
crates/rro-client/src/: lib.rs
crates/rro-core/src/: lib.rs  query.rs  turn.rs  types.rs
crates/rro-engine/: Cargo.toml
crates/rro-engine/src/: embedded.rs  flow.rs  handler.rs  lib.rs  serve.rs  sql.rs
crates/rro-engine/tests/: full_turn.rs  ops.rs  watch.rs  wire_surface.rs
crates/rro-ql/src/: lexer.rs  parser.rs
deploy/: Containerfile  Dockerfile  config.env.example  rrf-estate.volume  rrf-mesh.pod  rrf.container  rrf.service  rro-embed-vllm.container  rro.container
docs/: ARCHITECTURE.md  BENCHMARKS.md  BENCHMARKS_REAL.md  COMPARISON.md  EXECUTION.md  FJALL_MIGRATION_PLAN.md  MODELS.md  OBSERVABILITY.md  PARITY.md  PLAN.md  ROADMAP.md  ROADMAP_REAL.md  TESTING.md
docs/adr/: 0001-inference-backends.md  0002-rrd-reason-ready-objects.md
scripts/: fetch-models.sh  gates.sh  mesh.sh  quickstart.sh
