[workspace]
resolver = "2"
members = [
    "crates/rrf-core",
    "crates/embedder",
    "crates/recall",
    "crates/reranker",
    "crates/classifier",
    "crates/connectome",
    "crates/rrf-net",
    "crates/rrf-flow",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.90"
license = "LicenseRef-ReasonReady-Proprietary"
authors = ["EonsofStupid <jessay@gmail.com>"]
repository = "https://github.com/eonsofstupid/rrf"
homepage = "https://github.com/eonsofstupid/rrf"

[workspace.dependencies]
# Internal crates
rrf-core = { path = "crates/rrf-core" }
embedder = { path = "crates/embedder" }
recall = { path = "crates/recall" }
reranker = { path = "crates/reranker" }
classifier = { path = "crates/classifier" }
connectome = { path = "crates/connectome" }
rrf-net = { path = "crates/rrf-net" }
rrf-flow = { path = "crates/rrf-flow" }

# External
tokio = { version = "1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
