[package]
name = "connxism"
description = "Reason Ready — the kvs-connectome. RocksDB estate management: nodes, connectors, warp points, and the persistent hybrid (vector + BM25) recall spine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[features]
# The storage backend is chosen by exactly ONE of these mutually-exclusive
# features (enforced by a compile_error in src/kv/mod.rs). Only the selected
# backend's code compiles — the two never coexist in a build. RocksDB is the
# shipping default; `kvs-fjall` swaps in the pure-Rust Fjall 3.x LSM. Comparing
# them is a clyffy-level concern (build clyffy against each), not the engine's.
default = ["kvs-rocks"]
kvs-rocks = ["dep:rocksdb"]
kvs-fjall = ["dep:fjall"]

[dependencies]
rro-core = { workspace = true }
recall = { workspace = true }
rocksdb = { workspace = true, optional = true }
fjall = { version = "3.1.7", optional = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
proptest = { workspace = true }
embedder = { workspace = true }
