[package]
name = "reranker"
description = "Reason Ready — true-relevance ordering. Lexical default + DevPULSE (Nemotron) plug-point."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
# Enables the candle-backed DevPULSE (Nemotron) reranker.
candle = []

[dependencies]
rro-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "time", "rt"] }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "rerank"
harness = false
